# RAG

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py  test.ipynb
alembic/: env.py
alembic/versions/: 2025_08_26_1307-45502c620664_create_initial_tables.py  2025_08_27_0334-d2c91eb51f76_added_relationships_between_tables.py  2025_08_27_1314-4846da6b976f_added_names_for_constraints.py  2025_08_27_1318-cf19a32bf645_fixed_foreing_keys_type_to_bigint.py  2025_08_29_1156-3294f1940552_added_table_for_prompts.py  2025_08_30_2103-19bfec9ffdbf_changed_indexes_in_chunk_tables.py  2025_09_01_1602-5c786914f584_changed_chunks_and_documents_props.py  2025_09_02_2055-06801f22965a_deleted_flags_in_documents.py  2025_09_03_0011-fed4033f1e07_changed_tokens_type_in_tokenizedchunk.py  2025_09_07_1606-804f5fcf92bf_added_relationship_between_users_and_.py  2025_09_07_1953-2c6e62fe0b30_fixed_type_for_users_password_hash.py  2025_09_22_0333-9159ed20e205_create_chunk_table.py  2025_09_22_0336-ecef875da485_create_tables_for_chunks_vectors_and_.py  2026_01_03_2024-83cedfad127a_add_file_storage_fields_for_documents.py
api/: main.py
api/modules/: rag.py
api/routes/: rag.py
api/services/: llm.py
src/: app.py  bm25_ss_search.py  config.py  database.py  dataset_loader.py  llm_client.py  models.py
src/app/: main.py  rag_schemas.py  rag_service.py
src/assistant/: router.py  schemas.py  service.py  utils.py
src/auth/: dependencies.py  router.py  schemas.py  utils.py
src/bm25/: bm25_search.py  tokenizator.py
src/core/: llm_provider.py
src/rag/: __init__.py  (+1 more)
(+48 files in other folders)
